CREATE TYPE "role" AS ENUM (
  'admin',
  'user'
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "role" role,
  "username" varchar,
  "password" varchar,
  "created_at" timestamp
);

CREATE TABLE "auction" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_seller" integer,
  "name" varchar,
  "body" text,
  "image_id" varchar,
  "starting_price" int,
  "created_at" timestamp,
  "end_at" timestamp
);

CREATE TABLE "offer" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_auction" int,
  "id_buyer" int,
  "price" int,
  "created_at" timestamp
);

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "auction" ("id_seller");

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "offer" ("id_buyer");

ALTER TABLE "auction" ADD FOREIGN KEY ("id") REFERENCES "offer" ("id_auction");