Table users {
  id integer [primary key,increment]
  role role [not null]
  username varchar [unique,not null]
  email varchar [unique,not null]
  password varchar [not null]
  created_at timestamp [not null]
}
Enum role {
  admin
  user
}

Table auction {
  id integer [primary key,increment]
  id_seller integer [not null]
  name varchar [not null]
  description text
  image_id varchar
  starting_price int
  created_at timestamp [not null]
  end_at timestamp [not null]
}
Ref : auction.id_seller < users.id

Table offer{
  id_auction int [not null]
  id_buyer int [not null]
  price int [not null]
  created_at timestamp
  Indexes {
    (id_auction, id_buyer) [unique]
  }
}
Ref : offer.id_buyer < users.id
Ref : offer.id_auction < auction.id

Table image {
  id_image integer [primary key,increment]
  id_auction integer [not null]
  position integer [not null]
  filename varchar(100) [unique]
  indexes {
    (id_auction,position) [unique]
  }
}
Ref : image.id_auction < auction.id
